--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page</title>
     <link rel="stylesheet" href="/assets/css/admin.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="/assets/javascript/admin.js"></script>
 </head>
 <body>
     <div class="admin-container">
@@ -12,16 +14,12 @@
         <p>Click the button below to access the resume editor:</p>
         <button onclick="redirectToResumeEditor()">Resume Editor</button>
         <button onclick="logout()">Logout</button>
+        
+        <h2>Visitor Statistics</h2>
+        <canvas id="dailyChart"></canvas>
+        <canvas id="weeklyChart"></canvas>
+        <canvas id="monthlyChart"></canvas>
+        <canvas id="countryChart"></canvas>
     </div>
-
-    <script>
-        function redirectToResumeEditor() {
-            window.location.href = "/admin/resume_editor";
-        }
-
-        function logout() {
-            window.location.href = "/logout";
-        }
-    </script>
 </body>
 </html>
