--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,34 +9,17 @@
   <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
   <link rel="stylesheet" type="text/css" href="/assets/css/typewriter.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <script
-    src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-    crossorigin="anonymous">
-  </script>
-  <script src="/assets/javascript/index.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="/assets/javascript/typewriter.js"></script>
   <script src="/assets/javascript/api.js"></script>
   <script src="/assets/javascript/utils.js"></script>
+  <script src="/assets/javascript/cookies.js"></script>
+  <script src="/assets/javascript/index.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
   <title>Home</title>
-
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-W442D8W2');</script>
-  <!-- End Google Tag Manager -->
-
 </head>
 
 <body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W442D8W2"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-
   <div>
     <%- include('partials/messageBox', {css: 'success'}); %>
     <%- include('partials/messageBox', {css: 'error'}); %>
@@ -45,33 +28,53 @@
     <%- include('partials/header'); %>
     <main>
       <canvas class="matrix"></canvas>
-      <div id="home" class="section">
-        <div class="section-container">
-          <%- include('partials/welcome'); %>
+      <div id="content">
+        <div id="home" class="section">
+          <div class="section-container">
+            <%- include('partials/welcome'); %>
+          </div>
         </div>
-      </div>
-      <div id="about" class="section">
-        <div class="section-container">
-          <%- include('partials/about'); %>
+        <div id="about" class="section">
+          <div class="section-container">
+            <%- include('partials/about'); %>
+          </div>
+          <div id="resumeContainer">
+            <%- include('partials/cv/cv_preview') %>
+          </div>
         </div>
-        <div id="resumeContainer">
-          <%- include('partials/cv/cv_preview') %>
-        </div>
-      </div>
-      <div id="contact" class="section">
-        <div class="section-container">
-          <%- include('partials/contact'); %>
+        <div id="contact" class="section">
+          <div class="section-container">
+            <%- include('partials/contact'); %>
+          </div>
         </div>
       </div>
     </main>
     <footer class="footer">
-      <span>Copyright © 2024</span>
+      <a id="copyright" href="javascript:void(0);"><span>Copyright © 2024</span></a>
       <span>Made with &#10084;&#65039; by Stanimir Monev</span>
       <span>
         <%- include('partials/socialMedia', {id:'contacts', css:'social-media-icons-footer', section:'footer'}); %>
       </span>
     </footer>
   </div>
+
+  <div id="cookieNotice">
+    <p>We use cookies to ensure that we give you the best experience on our website. By continuing to use this site, you consent to our use of cookies. 
+      <a id="learnMore" href="javascript:void(0);">Learn more</a>.
+    </p>
+    <button id="acceptCookies">Accept All</button>
+    <button id="customizeCookies">Customize</button>
+    <div id="cookiePreferences" style="display:none;">
+      <p>Select which cookies you want to allow:</p>
+      <label><input type="checkbox" id="essentialCookies" checked disabled> Essential Cookies</label><br>
+      <label><input type="checkbox" id="functionalCookies"> Functional Cookies</label><br>
+      <label><input type="checkbox" id="analyticsCookies"> Analytics Cookies</label><br>
+      <button id="savePreferences">Save Preferences</button>
+    </div>
+  </div>
+  
+  
+  
     
   <script src="/assets/javascript/resumeDownload.js"></script>
 </body>
