--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,10 @@
 <div id="mainNavbar" class="navbar">
-	<a href="/">
+	<a id="logoLink" href="/">
 		<img class="logo" src="/assets/images/smworks_logo_cropped.png" alt="logo">
 	</a>
 	<div class="links">
-		<a href="#home">Home</a>
-		<a href="#about">About</a>
-		<a href="#contact">Contact</a>
+		<a id="homeButton" href="/#home">Home</a>
+		<a id="aboutButton" href="/#about">About</a>
+		<a id="contactButton" href="/#contact">Contact</a>
 	</div>
 </div>
